Corrigindo console.log

--- a/client/index.html
+++ b/client/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1" />
-    <link rel="icon" type="image/png" href="/attached_assets/Ativo 2.png" />
-    <title>Hadassa Estética - Cuidados Profissionais de Beleza</title>
+    <link rel="icon" type="image/png" href="/attached_assets/Ativo 2.png"/>
+    <title>Dra. Hadassa Matos - Cuidados Profissionais de Estética</title>
     <meta name="description" content="Tratamentos estéticos profissionais personalizados com a esteticista Hadassa. Limpeza de pele, hidratação facial, peeling químico e mais. Agende sua consulta!" />
     <meta name="keywords" content="estética, beleza, tratamentos faciais, limpeza de pele, São Paulo, esteticista" />
     
